--- a/deployment/pipelines/build-stage.yml
+++ b/deployment/pipelines/build-stage.yml
@@ -53,7 +53,7 @@
             }
             CodeCoverage = @{
               Enabled = $true
-              Path = '../$(Module.ArtifactPath)/*.psm1', '../$(Module.ArtifactPath)/*-*.ps1', '../$(Module.ArtifactPath)/Config/*.ps1', '../$(Module.ArtifactPath)/ArgumentCompleters/*.ps1'
+              Path = '../$(Module.ArtifactPath)/*.psm1', '../$(Module.ArtifactPath)/*-*.ps1', '../$(Module.ArtifactPath)/Types/*.ps1', '../$(Module.ArtifactPath)/Config/*.ps1', '../$(Module.ArtifactPath)/ArgumentCompleters/*.ps1'
               OutputPath = '$(Pester.CoverageOutput)'
             }
         }
@@ -74,7 +74,7 @@
       inputs:
         codeCoverageTool: JaCoCo
         summaryFileLocation: $(Pester.CoverageOutput)
-        pathToSources: $(Module.ArtifactPath);$(Module.ArtifactPath)/Config;$(Module.ArtifactPath)/ArgumentCompleters
+        pathToSources: $(Module.ArtifactPath);$(Module.ArtifactPath)/Types;$(Module.ArtifactPath)/Config;$(Module.ArtifactPath)/ArgumentCompleters
       displayName: Publish Pester Unit Test Code Coverage
       condition: in(variables['Agent.JobStatus'], 'Succeeded', 'SucceededWithIssues', 'Failed')
 
