--- a/deployment/pipelines/build-stage.yml
+++ b/deployment/pipelines/build-stage.yml
@@ -59,8 +59,7 @@
             }
         }
         Invoke-Pester -Configuration $configuration
-        $modulePaths = (dir $(Module.Path) -Directory -Recurse).FullName -join ';'
-        Write-Host "Setting ModulePaths to '${modulePaths}'."
+        $modulePaths = (dir "$(Modules.Path)" -Directory -Recurse).FullName -join ';'
         Write-Host "##vso[task.setvariable variable=ModulePaths]${modulePaths}"
       workingDirectory: $(Module.Tests.Path)
       displayName: Run Pester Unit tests
