Many small fixes.

--- a/GitWorktreeProjects.Tests/TestFiles/OneProject/MyFirstProject.project
+++ b/GitWorktreeProjects.Tests/TestFiles/OneProject/MyFirstProject.project
@@ -9,12 +9,14 @@
     {
       "Name": "main",
       "InitialCommitish": "main",
-      "RelativePath": "main"
+      "RelativePath": "main",
+      "NewBranch": ""
     },
     {
       "Name": "worktree2",
       "InitialCommitish": "tree",
-      "RelativePath": "anotherTree"
+      "RelativePath": "anotherTree",
+      "NewBranch": ""
     }
   ]
 }
