--- a/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/MyFirstProject.project
+++ b/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/MyFirstProject.project
@@ -1,5 +1,6 @@
 ﻿{
   "SchemaVersion": 1,
+  "Name": "MyFirstProject",
   "RootPath": "/data/projects/MyFirstProject",
   "GitPath": "/data/projects/MyFirstProject/.bare",
   "GitRepository": "https://example.com/gitworktreeproject/MyFirstProject.git",
@@ -8,7 +9,8 @@
     {
       "Name": "main",
       "InitialCommitish": "main",
-      "RelativePath": "main"
+      "RelativePath": "main",
+      "NewBranch": null
     }
   ]
 }
