--- a/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/MyFirstProject.project
+++ b/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/MyFirstProject.project
@@ -10,7 +10,13 @@
       "Name": "main",
       "InitialCommitish": "main",
       "RelativePath": "main",
-      "NewBranch": null
+      "NewBranch": ""
+    },
+    {
+      "Name": "worktree2",
+      "InitialCommitish": "tree",
+      "RelativePath": "anotherTree",
+      "NewBranch": ""
     }
   ]
 }
