--- a/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/SecondProject.project
+++ b/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/SecondProject.project
@@ -10,7 +10,7 @@
       "Name": "main",
       "InitialCommitish": "main",
       "RelativePath": "main",
-      "NewBranch": null
+      "NewBranch": ""
     }
   ]
 }
