--- a/GitWorktreeProjects.Tests/TestFiles/EmptyProject/MyFirstProject.project
+++ b/GitWorktreeProjects.Tests/TestFiles/EmptyProject/MyFirstProject.project
@@ -5,18 +5,5 @@
   "GitPath": "/data/projects/MyFirstProject/gitPath",
   "GitRepository": "https://notreally.github.com/gitworktreeproject/MyFirstProject.git",
   "SourceBranch": "main",
-  "Worktrees": [
-    {
-      "Name": "main",
-      "InitialCommitish": "main",
-      "RelativePath": "main",
-      "NewBranch": ""
-    },
-    {
-      "Name": "worktree2",
-      "InitialCommitish": "tree",
-      "RelativePath": "worktree2",
-      "NewBranch": ""
-    }
-  ]
+  "Worktrees": []
 }
