Added Unit tests for WorktreeFilterArgumentCompleter.

--- a/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/SecondProject.project
+++ b/GitWorktreeProjects.Tests/TestFiles/ThreeProjects/SecondProject.project
@@ -7,9 +7,9 @@
   "SourceBranch": "main",
   "Worktrees": [
     {
-      "Name": "main",
-      "InitialCommitish": "main",
-      "RelativePath": "main",
+      "Name": "master",
+      "InitialCommitish": "master",
+      "RelativePath": "master",
       "NewBranch": ""
     }
   ]
