--- a/deployment/pipelines/build-stage.yml
+++ b/deployment/pipelines/build-stage.yml
@@ -33,7 +33,7 @@
       displayName: Build GitWorktreeProjects module
       inputs:
         filePath: deployment/pipelines/scripts/Build.ps1
-        arguments: >
+        arguments: >-
           -CommitDate $(GitVersion.CommitDate)
           -MajorMinorPatch $(GitVersion.MajorMinorPatch)
           -NuGetPreReleaseTagV2 $(GitVersion.NuGetPreReleaseTagV2)
