Add License. Define supported PowerShell versions and OSses in module.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
         "gitworktree",
         "ngwp",
         "Worktree"
-    ]
+    ],
+    "files.associations": {
+        "*.yaml": "home-assistant"
+    }
 }
